[gd_scene load_steps=4 format=3 uid="uid://benl422cbaawx"]

[ext_resource type="Script" path="res://Scenes/ShadowCanvas/finished_item_screen.gd" id="1_b7mut"]
[ext_resource type="Theme" uid="uid://cty2l2sj86fnj" path="res://UI/game_theme.tres" id="1_sr3ka"]
[ext_resource type="Script" path="res://Scenes/Common/button_change_area.gd" id="4_0888s"]

[node name="FinishedItemScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b7mut")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sr3ka")
color = Color(0, 0, 0, 0.498039)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="ItemImageContainer" type="PanelContainer" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(168, 168)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_sr3ka")

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HBoxContainer/ItemImageContainer"]
layout_mode = 2
expand_mode = 1

[node name="PanelItemStats" type="Panel" parent="CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(96, 168)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer/PanelItemStats"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -81.5
offset_right = 45.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="LabelItemPrefix" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "You created:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelItem" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Steel Sword"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelAccuracyPrefix" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Accuracy:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelAccuracy" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "69 %"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelTierPrefix" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Tier:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelTier" type="RichTextLabel" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true
text = "[center]MORTAL[/center]"
fit_content = true
autowrap_mode = 2

[node name="LabelGradePrefix" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Final grade:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LabelGrade" type="Label" parent="CenterContainer/HBoxContainer/PanelItemStats/VBoxContainer"]
custom_minimum_size = Vector2(74, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "C"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ItemImageContainer2" type="PanelContainer" parent="CenterContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(168, 168)
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("1_sr3ka")

[node name="DebugRect" type="TextureRect" parent="CenterContainer/HBoxContainer/ItemImageContainer2"]
visible = false
layout_mode = 2
expand_mode = 1

[node name="ButtonReturn" type="Button" parent="."]
custom_minimum_size = Vector2(0, 24)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = 146.0
offset_right = 96.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sr3ka")
text = "Return to dark room"
script = ExtResource("4_0888s")

[connection signal="pressed" from="ButtonReturn" to="ButtonReturn" method="_on_pressed" binds= ["Dark Room"]]
